feat: 完成宠物管理与媒体搜索核心功能迭代
本次迭代完成了多项核心功能升级与重构：
1. 新增宠物三视图字段支持，完善宠物数据模型
2. 重构API路由统一挂载到/api前缀，移除冗余路由前缀
3. 优化Qdrant向量ID生成逻辑，使用UUID5保证业务ID映射一致性
4. 重构宠物与照片转换逻辑，增强JSON数组解析灵活性
5. 实现照片/视频语义搜索功能，支持多条件筛选
6. 新增媒体分析消息队列支持，扩展拍摄时间与用户标签字段
7. 优化体重记录查询逻辑，使用getFirst替代get(0)
8. 删除冗余的image_service与user_tag相关代码
9. 同步实现宠物删除时清理向量数据、上传宠物时生成识别向量
10. 新增文档记录打卡设计与功能需求方案